# Pay3

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/: bug-report.yml  pull_request_template.md
.github/workflows/: add-contributors.yml
pay3/: .gitignore  Anchor.toml
pay3-frontend/: package-lock.json  package.json
pay3-frontend/backend/: index.js
pay3-frontend/src/app/: globals.css  layout.tsx  page.tsx
pay3-frontend/src/components/: PayUser.tsx  RegisterUser.tsx  UpiPaymentApp.tsx  WalletConnect.tsx  idl.ts
pay3/programs/pay3/: Cargo.toml
pay3/programs/pay3/src/: lib.rs
pay3/tests/: pay3.ts
