[package]
name = "pay3"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[workspace]
resolver = "2"

[lib]
crate-type = ["cdylib", "lib"]
name = "pay3"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build","anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.1", features = ["init-if-needed", ]}
anchor-spl = {version = "0.30.1"}
